# quiz-app

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
application_config/: Cargo.toml
application_config/src/: config_factory.rs  error.rs  lib.rs
application_config/src/config_file_reader/: confy_config_file_reader.rs  error.rs  mod.rs
application_config/src/environment/: environment_supported_config.rs  environment_value.rs  error.rs  read_environment.rs
application_config/test_data/config/config_file_reader/: missing_required_field.yml  valid_test_config.yml
confy/: Cargo.toml  README.md
confy/examples/: simple.rs
confy/src/: lib.rs
quiz_api/: Cargo.toml
quiz_api/src/: lib.rs  main.rs  server.rs
quiz_api/src/application/: application_service.rs  mod.rs  question_set.rs
quiz_api/src/application/config/application/: mod.rs
quiz_api/src/ports/: command_line.rs  mod.rs
quiz_api/src/ports/http/: accept_header.rs  api_version.rs  mod.rs
quiz_api/src/ports/http/response/: error_response.rs  error_response_mapping.rs  mod.rs  question_set_response.rs
quiz_api/src/ports/http/warp/: mod.rs  rejection.rs
quiz_api/src/ports/http/warp_port/: error.rs  rejection.rs
quiz_api/src/ports/logging/: log_entities.rs  log_entity.rs  log_entry.rs  log_section.rs  mod.rs  simple_logging.rs  structured_log_bodies.rs
quiz_api/src/quiz_domain/: mocks.rs
quiz_api/tests/: cli.rs
quiz_api/tests/admin/: status.rs
quiz_api/tests/api/: invalid.rs  version.rs
quiz_api/tests/common/state/: mod.rs
quiz_api/tests/common/web/: mod.rs
quiz_domain/: Cargo.toml
quiz_domain/src/: examples.rs  id.rs  lib.rs  question_set.rs
quiz_domain/src/answer/: basic_answer.rs  mod.rs
quiz_domain/src/entities/: id.rs  mod.rs  question_set.rs
quiz_domain/src/entities/answer/: basic_answer.rs
quiz_domain/src/entities/question/: mod.rs  simple_question.rs
quiz_domain/src/models/: mod.rs  question.rs
quiz_domain/src/models/quiz/: question.rs
quiz_domain/src/question/: mod.rs  simple_question.rs
quiz_domain/src/services/: mod.rs  quiz.rs
quiz_domain/src/services/quiz/: mod.rs
server/: Cargo.toml
server/configs/: functional_tests.yml  local.yml
server/src/: app.rs  cli.rs  error.rs  headers.rs  lib.rs  logging.rs  main.rs  rejection.rs  routes.rs
server/src/application/: error.rs  mod.rs
server/src/application/config/: application_config_mocks.rs  config_factory.rs  env.rs  error.rs  mod.rs  version.rs  web.rs
server/src/application/config/application/: env.rs  error.rs  mod.rs  web.rs
server/src/application/config/config_file_reader/: confy_config_file_reader.rs
server/src/application/config/config_reader/: confy_config_reader.rs  error.rs  mod.rs
server/src/application/config/environment/: environment_supported_config.rs  environment_value.rs  error.rs  mod.rs
server/src/application/services/: mod.rs
server/src/application/services/quiz/: mod.rs
server/src/application/web/: accept_header.rs  error.rs  mod.rs  rejection.rs  response.rs  routes.rs
server/src/application/web/filters/: mod.rs  quiz.rs
server/src/application/web/handlers/: mod.rs
server/src/config/: version.rs
server/src/config/application/: env.rs  error.rs  mod.rs  web.rs
server/src/domain/models/quiz/: question.rs
server/src/domain/quiz/: mod.rs  question.rs
server/src/domain/services/quiz/: mod.rs
server/src/error/: api_validation_error.rs  mod.rs
server/src/filters/: greeting.rs  mod.rs  validate.rs
server/src/filters/admin/: mod.rs
server/src/filters/quiz/: mod.rs
server/src/filters/validate/: api_version.rs
server/src/filters/validate/api_version/: error.rs  mod.rs
server/src/handlers/: greeting.rs  mod.rs
server/src/logging/: mod.rs
server/src/quiz_domain/: mocks.rs
server/src/rejection/: mod.rs
server/src/simple_domain_impl/models/quiz/: question.rs
server/src/simple_domain_impl/services/quiz/: mod.rs
server/src/web/: error.rs  rejection.rs  routes.rs
server/src/web/filters/: greeting.rs  mod.rs
server/src/web/filters/admin/: mod.rs
server/src/web/filters/validate/: mod.rs
server/src/web/handlers/: mod.rs
server/tests/: cli.rs  hello.rs  testing.rs
server/tests/admin/: status.rs
server/tests/api/: invalid.rs  mod.rs  version.rs
server/tests/api_version/: mod.rs
server/tests/common/: mod.rs  web.rs
server/tests/common/state/: mod.rs
server/tests/common/web/: mod.rs  requests.rs
server/tests/greeting/: mod.rs
server/tests/quiz/: examples.rs
server_backend/: Cargo.toml
server_backend/src/: lib.rs  main.rs  server.rs
server_backend/src/application/: application_service.rs  error.rs  logging.rs  mod.rs  quiz_domain_transformations.rs
server_backend/src/application/config/: mod.rs
server_backend/src/application/web/: accept_header.rs  error.rs  mod.rs  rejection.rs
server_backend/src/application/web/filters/: greeting.rs
server_backend/src/ports/: logging.rs  mod.rs
server_backend/src/ports/http/: accept_header.rs  error.rs  mod.rs  rejection.rs  routes.rs  version.rs
server_backend/src/ports/http/filters/: mod.rs  (+2 more)
server_backend/src/quiz_domain/: mocks.rs
server_backend/tests/: cli.rs
server_backend/tests/common/state/: mod.rs  web.rs
simple_quiz_domain_impl/: Cargo.toml
simple_quiz_domain_impl/src/services/quiz/: mod.rs
(+57 files in other folders)
