[package]
name = "quiz_api"
version = "0.1.0"
authors = ["Josh Jones <ohblonddev@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
application_config = { path = "../application_config" }
cfg-if = "0.1"
http = "0.2"
log = "0.4"
pkg-version = "^1.0"
pretty_env_logger = "0.4"
quiz_domain = { path = "../quiz_domain" }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
warp = "^0.2.2"

[dev-dependencies]
anyhow = "1.0"
assert_cmd = "1.0"
lazy_static = "1"
mockall = "^0.8.1"
predicates = "1.0"
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
serde_yaml = "^0.8"
spectral = "^0.6.0"
