[package]
name = "server"
version = "0.1.0"
authors = ["Josh Jones <ohblonddev@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "^0.2.2"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0" }
regex = "1"
pkg-version = "^1.0"
getset = "^0.1.0"
quiz_domain = { path="../quiz_domain" }
thiserror = "1.0"
cfg-if = "0.1"

[dev-dependencies]
spectral = "^0.6.0"
pkg-version = "^1.0"
mockall = "^0.7.0"
reqwest = { version = "0.10", features = ["json"] }
anyhow = "1.0"
serde_json = "1.0"
http = "0.2"
lazy_static = "1"