[package]
name = "simple_quiz_domain_impl"
version = "0.1.0"
authors = ["Josh Jones <ohblonddev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "^0.2.2"
serde = { version = "1.0", features = ["derive"] }
quiz_domain = { path="../quiz_domain" }
